feat: 增强视频分析功能并优化图生视频流程
- 在analyze_video函数中添加keep_frames参数，可选择保留提取的帧文件
- 重构图生视频逻辑，支持多张关键帧并优化提示词提取
- 更新README文档，详细说明关键帧提取机制和图生视频流程
- 改进Sora2免费API处理，支持图生视频模式并增强错误处理
- 优化UI界面，增加关键帧展示区域并调整相关提示信息

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .env
+.ipynb_checkpoints/docker-compose-checkpoint.yml
+.ipynb_checkpoints/Dockerfile-checkpoint
+.ipynb_checkpoints/README-checkpoint.md
+.claude/settings.local.json
