fix(api): 改进API错误处理和图片上传功能
修复API请求中的错误处理逻辑，增加更详细的错误信息返回
优化图片上传功能，解决文件指针问题和内存处理
添加图片压缩功能以减少base64编码体积
改进Sora2 API的错误响应处理

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .ipynb_checkpoints/Dockerfile-checkpoint
 .ipynb_checkpoints/README-checkpoint.md
 .claude/settings.local.json
+__pycache__/qwen3vl.cpython-312.pyc
